b341f71093b1c0bda60c1ff4cbaac117f88c33f3 Update: Migrating to Fomantic-UI, which is a maintained fork of Semantic-UI, which is no longer being developed
8e3213a73816dd318d7bc0fe749df3a65ceddc76 Dev fix: BS4/5 buttons when working with nested groups weren't aligning correctly

Sync to source repo @8e3213a73816dd318d7bc0fe749df3a65ceddc76

--- a/css/buttons.bootstrap5.css
+++ b/css/buttons.bootstrap5.css
@@ -130,8 +130,7 @@ div.dt-button-collection {
   border-radius: 4px;
   box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
   padding: 0.5rem 0;
-  max-width: none;
-  min-width: 200px;
+  width: 200px;
 }
 div.dt-button-collection div.dropdown-menu {
   position: relative;
@@ -269,6 +268,9 @@ div.dt-button-collection.columns.dtb-b1 .dt-button {
 }
 div.dt-button-collection.fixed:before, div.dt-button-collection.fixed:after {
   display: none;
+}
+div.dt-button-collection .btn-group {
+  flex: 1 1 auto;
 }
 div.dt-button-collection .dt-button {
   min-width: 200px;
